--- a/README.org
+++ b/README.org
@@ -2,15 +2,21 @@
 
 ** Cross compilation on ARM
 
-Build and run on aarch64:
+Setup for cross compilation on aarch64:
 #+BEGIN_SRC sh
-$ cargo r --release --target aarch64-unknown-linux-gnu -F vendored-openssl
+  $ sudo apt install qemu-user-binfmt
+  $ rustup target add aarch64-unknown-linux-gnu
+#+END_SRC
+
+Build and run (with qemu-user-binfmt) on aarch64:
+#+BEGIN_SRC sh
+  $ cargo r --release --target aarch64-unknown-linux-gnu -F vendored-openssl
 #+END_SRC
 
 ** Performance
 
 *** AMD Ryzen 9 7900
-It takes ~160ms to complete all puzzles.
+It takes ~115ms to complete all puzzles.
 
 *** Raspberry PI 3 (aarch64)
-It takes ~2.5s to complete all puzzles.
+It takes ~1.8s to complete all puzzles.
